# django_demo

./: pyproject.toml
root_django_app/: manage.py
root_django_app/root_django_app/: asgi.py  settings.py  urls.py  wsgi.py
