[tool.poetry]
name = "django-demo"
version = "0.1.0"
description = ""
authors = ["Vladimir Panferov <v3nseagal@gmail.com>"]
readme = "README.md"
packages = [{include = "django_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
